# bnb_and_approximations

./: .atom-dbg.cson  .fptas2.c.swp  .williamson_shmoy_dp.c.swp  31-05-2018_new_a_posteriori.csv  31-05-2018_old_a_posteriori.csv  CMakeLists.txt  FPTAS_test  FPTAS_test.cpp  Makefile  Makefile.branch_and_bound_app  Makefile.branch_and_bound_app_v2  Makefile.branch_and_bound_benchmark  Makefile.branch_and_bound_benchmark_v2  Makefile.core  README.md  app_out.csv  app_out_scraper.py  bench_extern.h  branch_and_bound.c  branch_and_bound.h  branch_and_bound_2.c  branch_and_bound_app.c  branch_and_bound_app.h  branch_and_bound_benchmark.c  branch_and_bound_benchmark.h  branch_and_bound_reasonably_big_correctness_test.cpp  branch_and_bound_short_correctness_test.cpp  branch_and_bound_test.cpp  branch_and_bound_tiny_correctness_test.cpp  branch_and_bound_unreasonably_big_correctness_test.cpp  branch_and_bound_v2.c  brown_sugar.c  cheesecake.c  cookie_dough.c  fptas.c  fptas.h  fptas2  fptas2.c  fptas_app.c  fptas_v2.c  (+33 more)
DP Algorithms/: vasirani_DP_test  vasirani_dp.c  williamson_shmoy_dp_test
c functionality test concepts/: bleh.c  cake_mix.c  caster_sugar.c  pisinger_reader.c  scratchpad.c  treacle.c
literature_review/: literature_review.bbl  literature_review_v2.bbl  literature_review_v2.bib  literature_review_v2.rmd
proposal/: Makefile  proposal.bib  proposal.tex
report/: report.rmd
report/report_v2/: BnBWithAAsReport_V2.bbl  BnBWithAAsReport_V2.rmd
thesis_drafts/: project_overview_draft.bbl  project_overview_draft.bib  project_overview_draft.rmd
